<resources>
    <string name="app_name">CovidAlert</string>
    <string name="total_confirmed_label">Confirmed:</string>
    <string name="total_recovered_label">Recovered:</string>
    <string name="total_deaths_label">Deaths:</string>
    <string name="information_label">About COVID-19</string>
    <string name="safety_button">Protect Yourself</string>
    <string name="statistics_button">Statistics</string>
    <string name="summary">Summary</string>
    <string name="summary_confirmed">CONFIRMED</string>
    <string name="summary_Recovered">RECOVERED</string>
    <string name="summary_death">DEATHS</string>
    <string name="summary_title">WORLDWIDE COVID-19 CASES</string>
    <string name="title_activity_maps">Map</string>
    <string name="newCases">+ %s</string>
    <string name="date">Last updated: %s - \'+\' refers to yesterdays cases</string>
    <string name="info_paragraph1">
        COVID-19 is a new infectious disease caused by Coronavirus. It is a
        respiratory virus that spreads through an infected persons sneeze,
        cough or speech. It can also spread through surfaces an infected
        person has been in contact with.
    </string>
    <string name="info_paragraph2">
        Common symptoms of COVID-19 are fever, dry cough and tiredness.
        Less common symptoms are aches and pains, sore throat, diarrhea,
        headaches and loss of taste or smell. Serious symptoms are
        difficulty breathing or shortness of breath, chest pain and loss
        of speech or movement.
    </string>
    <string name="safety_context">
        The following information are some tips and precautions you can take
        to reduce the chances of getting and spreading COVID-19.
    </string>
    <string name="safety_hygiene">
        Washing your hands regularly with soap and water. Using alcohol-based
        sanitisers to keep your hands clean.
    </string>
    <string name="safety_masks">
        Wearing a mask reduces the spread of the virus as they can prevent
        you coughing on others.
    </string>
    <string name="safety_distancing">
        Stay 1.5 metres from others when outside and avoid shaking hands,
        kissing or hugging other people.
    </string>
    <string name="safety_isolation">
        Stay at home unless you are leaving to do an essential activity.
    </string>
    <string name="safety_activity">Safety Information</string>
    <string name="statistic_refresh">Refresh</string>
</resources>
