<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/colorPrimaryDark"
        android:textIsSelectable="false"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:weightSum="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <Button
            android:id="@+id/informationButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/colorPrimary"
            android:drawableTop="@drawable/covid_image"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/information_label"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/safetyButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/colorAccent"
            android:drawableTop="@drawable/safety_image"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/safety_button"
            android:textColor="@android:color/background_light" />

        <Button
            android:id="@+id/statisticsButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.34"
            android:background="@color/colorAccentTwo"
            android:drawableTop="@drawable/statistics_image"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/statistics_button"
            android:textColor="@android:color/background_light" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>