<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:drawable/toast_frame"
    android:padding="10dp">

    <TextView
        android:id="@+id/countryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/total_confirmed_label"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintEnd_toStartOf="@+id/countryTitle"
        app:layout_constraintTop_toBottomOf="@+id/countryTitle" />

    <TextView
        android:id="@+id/recoveredTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/total_recovered_label"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintStart_toStartOf="@+id/confirmedTitle"
        app:layout_constraintTop_toBottomOf="@+id/confirmedTitle" />

    <TextView
        android:id="@+id/deathTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/total_deaths_label"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/recoveredTitle"
        app:layout_constraintTop_toBottomOf="@+id/recoveredTitle" />

    <TextView
        android:id="@+id/confirmedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countryTitle" />

    <TextView
        android:id="@+id/recoveredInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintEnd_toEndOf="@+id/confirmedInfo"
        app:layout_constraintTop_toBottomOf="@+id/confirmedInfo" />

    <TextView
        android:id="@+id/deathInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/common_google_signin_btn_text_dark_pressed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/recoveredInfo"
        app:layout_constraintTop_toBottomOf="@+id/recoveredInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>